--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sg-heatmap",
-  "version": "2.1.1",
+  "version": "2.1.3",
   "description": "Open-source all-in-one Swiss Army knife tool for creating Choropleth maps",
   "main": "dist/index.js",
   "scripts": {
@@ -14,9 +14,15 @@
     "url": "git+https://github.com/yongjun21/sg-heatmap.git"
   },
   "keywords": [
-    "data",
+    "heatmap",
+    "choropleth",
+    "Singapore",
+    "Google Maps",
+    "Leaflet",
+    "OpenLayers",
     "visualization",
-    "heatmap"
+    "mapping",
+    "cartography"
   ],
   "author": "Yong Jun",
   "license": "MIT",
