Added tiled map transformation

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sg-heatmap",
-  "version": "2.4.8",
+  "version": "2.5.0",
   "description": "Open-source all-in-one Swiss Army knife tool for creating Choropleth maps",
   "main": "dist/index.js",
   "scripts": {
@@ -33,6 +33,7 @@
   "dependencies": {
     "@mapbox/polyline": "^0.2.0",
     "chroma-js": "^1.2.1",
+    "hextile": "^1.0.4",
     "lodash": "^4.15.0",
     "proj4": "^2.3.15"
   },
