--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "sg-heatmap",
-  "version": "3.0.1",
+  "version": "3.2.0",
   "description": "Open-source all-in-one Swiss Army knife tool for creating Choropleth maps",
   "main": "dist/index.js",
+  "module": "dist/es/index.js",
   "scripts": {
-    "build": "rm -rf dist && mkdir dist && babel src --out-dir dist",
-    "extract": "babel-node src/extract.js",
+    "build": "rm -rf dist && mkdir -p dist && mkdir dist/es && BABEL_ENV=commonjs babel src --out-dir dist && babel src --out-dir dist/es",
+    "extract": "BABEL_ENV=commonjs babel-node src/extract.js",
     "prepublish": "npm run test && npm run build",
     "test": "standard"
   },
@@ -35,8 +36,7 @@
     "babel-runtime": "^6.11.6",
     "chroma-js": "^1.2.1",
     "hextile": "^1.0.6",
-    "lodash": "^4.15.0",
-    "proj4": "^2.3.15"
+    "lodash": "^4.15.0"
   },
   "devDependencies": {
     "babel-cli": "^6.14.0",
@@ -49,11 +49,20 @@
   },
   "babel": {
     "presets": [
-      "es2015",
+      [
+        "es2015",
+        {
+          "modules": false
+        }
+      ],
       "stage-2"
     ],
-    "plugins": [
-      "transform-runtime"
-    ]
+    "env": {
+      "commonjs": {
+        "plugins": [
+          "babel-plugin-transform-es2015-modules-commonjs"
+        ]
+      }
+    }
   }
 }
